test/fixtures/type-error/typeError.ro
type i32 = ???
type boolean = ???
fun x(): i32 = false